Issue #14761: Fix potential leak on an error case in the import machinery.